--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -7,6 +7,12 @@ html{
 h1,h2,h3,body{
   color: white;
 }
+header{
+  img{
+    max-width: 30%;
+  }
+  background: white;
+}
 .navigation{
   ul{
     background: $navbgcolor;
@@ -17,5 +23,11 @@ h1,h2,h3,body{
         font-family: Arial;
       }
     }
+  }
+}
+#currentpage{
+  li{
+    background: white;
+    text: $navbgcolor;
   }
 }
